--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,33 @@
-@import url('https://fonts.googleapis.com/css?family=Spartan&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Spartan&display=swap");
 
-*{
-  font-family: 'Spartan','Times New Roman', serif;
+* {
+  font-family: "Spartan", "Times New Roman", serif;
 }
 
 #container {
-    background-color: #1f222b;
-    color: #ffffff;
-    margin: 0 15%;
-    padding:5px;
-    margin-bottom: 10px;
-    border-radius:5px;
-  }
+  background-color: #1f222b;
+  color: #ffffff;
+  margin: 0 15%;
+  padding: 5px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+}
 
-  a {
-    text-decoration: none;
-  }
+a {
+  text-decoration: none;
+}
 
-  #img-python,#img-ruby{
-    margin: 0 auto;
-    text-align: center;
-  }
+#img-python,
+#img-ruby {
+  margin: 0 auto;
+  text-align: center;
+}
 
-  #img-ruby{
-    width:30%;
-    height: auto;
-  }
+#img-ruby {
+  width: 300px;
+  height: auto;
+}
+
+#img-ruby img {
+  width: 100%;
+}
