--- a/css/global-style.css
+++ b/css/global-style.css
@@ -2,11 +2,14 @@
 
 * {
   font-family: "Spartan", "Times New Roman", serif;
+  box-sizing: border-box;
+  margin:0;
+  padding:0;
 }
 
 body{
   width:100%;
-  box-sizing: border-box;
+  height: 100vh;
 }
 
 #container {
@@ -22,7 +25,7 @@ a {
 }
 
 .menu{
-  margin-left:200px;
+margin: 2% 18%;
 }
 
 #texto{
@@ -34,17 +37,18 @@ text-align: justify;
 
 .voltar{
 text-align: center;
-margin-top: 100px;
+margin-top: 3%;
 }
 
 
 .img-csharp,.img-java,.img-python,.img-ruby{
   padding-top:10px;
-text-align: center;
+  text-align: center;
 }
 
 #img-csharp,#img-java,#img-python,#img-ruby{
   width:20%;
+  max-width: 300px;
   height: auto;
 }
 
