--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 #container{
-  background-color: #1f222b;
   margin-left: 15%;
   margin-right: 15%;
   font-family: 'Times New Roman';
@@ -12,4 +11,27 @@ a{
 
 #histpython, #histjava, #histruby, #histcsharp{
   color: #ffffff;
+}
+
+
+body{
+  background: #333333;
+}
+
+li{
+  text-decoration: none;
+  float: left;
+  padding:0px 10px 0px 10px ;
+  /*border: 2px solid white;*/
+  width: 50px;
+  list-style-type: none;
+}
+
+#historia{
+  text-align: center;
+}
+
+
+a:hover{
+  background: #1F223B;
 }
