--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,7 +2,7 @@
 	background-color: #1F222B;
 	margin-left: 15%;
 	margin-right: 15%;
-	font-family: "Times New Roman", "";
+	font-family: "Times New Roman", serif;
 	color:#FFFFFF;
 }
 
