--- a/Css/Ruby.css
+++ b/Css/Ruby.css
@@ -1,9 +1,9 @@
 #Container{
-  background-color:#00FF7F;
+  background-color:#8B0000;
   margin: 0 15 0 15;
   font-family: 'Times New Roman', Arial, Calibri,serif;
   font-style: normal;
-  color:#696969;
+  color:#ffff22;
 }
 .LinksPaginas{
 
@@ -12,7 +12,7 @@
   color: #7856f4;
   margin-bottom:30% ;
 }
-.Imagemjava{
+.ImagemRuby{
   margin-left: 38%;
   margin-right: 50%;
   margin-top: -10%;
