--- a/Css/Python.css
+++ b/Css/Python.css
@@ -1,5 +1,5 @@
 #Container{
-  background-color:#00FF7F;
+  background-color:#4129E6;
   margin: 0 15 0 15;
   font-family: 'Times New Roman', Arial, Calibri,serif;
   font-style: normal;
@@ -12,7 +12,7 @@
   color: #7856f4;
   margin-bottom:30% ;
 }
-.Imagemjava{
+.Imagempython{
   margin-left: 38%;
   margin-right: 50%;
   margin-top: -10%;
