--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,10 +1,15 @@
 #container {
-    background-color: #1f222b;
+    background-color: #aa73f2;
     margin-left: 15%;
     margin-right: 15%;
     font-family: "Times New Roman";
     text-decoration-color: #ffffff;
 }
 a{
-  text-decoration: none;
+    text-decoration: none;
+}
+img{
+    margin: 2%;
+    height: 10%;
+    width: 96%;
 }
