--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,9 +1,9 @@
 #container {
     background-color: #1f222b;
-    margin-left: 15%;
-    margin-right: 15%;
+    margin:0 15% 0 15%;
     font-family: "Times New Roman", serif;
     color: #ffffff;
+    height: 800px;
 }
 a{
   text-decoration: none;
@@ -27,4 +27,39 @@ a{
 #imgCsharp{
 	width: 15%;
 	height: 15%;
+}
+
+.img-box{
+  
+}
+
+.tit-pag{
+  text-align: center;
+  font-family: 'Tahoma',serif;
+}
+
+.menu-box{
+  padding: 0.1% 0 0.1% 0;
+  background-color: #262423;
+  border-radius: 10px;
+}
+
+.menu-horiz li{
+  display: inline;
+  padding: 0 9% 0 9%;
+}
+.menu-horiz li a{
+  color: #fff;
+  font-family: 'Tahoma', serif;
+  font-size: 20px;
+  padding: 1%;
+}
+.menu-horiz li a:LINK{
+  color: #fff;
+}
+.menu-horiz li a:VISITED{
+  color: #fff;
+}
+.menu-horiz li a:HOVER{
+  background-color: #50786d;
 }
