--- a/css/estilo.css
+++ b/css/estilo.css
@@ -12,6 +12,8 @@
   margin:0 15% 0 15%;
   font-family: 'Times New Roman',serif;
   color:#fff;
+  height: 800px;
+  border-radius: 10px 10px 0 0;
 }
 
 /*
@@ -41,4 +43,43 @@ a{
 }
 #img-ruby{
   width: 10%;
+}
+
+/* Menu Horizontal */
+
+.menu-box{
+    padding: 0.01% 0 0.01% 0;
+    background-color: #262423;
+    border-radius: 10px;
+}
+
+.menu-horiz li{
+  display: inline;
+  padding: 0 9% 0 9%;
+}
+
+.menu-horiz li a{
+  color:#fff;
+  font-family:'Tahoma',serif;
+  font-size: 20px;
+  padding: 1%;
+}
+.menu-horiz li a:LINK{
+  color:#fff;
+}
+.menu-horiz li a:VISITED{
+  color:#fff;
+}
+.menu-horiz li a:HOVER{
+  background-color: #50786d;
+}
+/* Menu Horizontal */
+
+.tit-pag{
+  text-align: center;
+  font-family: 'Tahoma',serif;
+}
+
+.img-box{
+  padding: 0 10% 0 10%;
 }
