--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,77 @@
 #container{
+  background-color: #adabaf;
+  margin-left: 15%;
+  margin-right: 15%;;
+  font-family: 'Times New Roman';
+  color = ghostwhite;
+}
+a{
+  text-decoration: none;
+  color: ghostwhite;
+}
+
+
+
+#container{
   margin-left: 15%;
   margin-right: 15%;
   font-family: 'Times New Roman';
   color: #ffffff;
-}
-a{
-  text-decoration: none;
-  color: #ffffff;
-}
+  height: 900px;
 
+  border-radius: 11px 11px 0 0;
+}
 #histpython, #histjava, #histruby, #histcsharp{
   color: #ffffff;
 }
-
-
 body{
   background: #333333;
 }
 
-li{
-  text-decoration: none;
-  float: left;
-  padding:0px 10px 0px 10px ;
-  border: 2px solid white;
-  width: 50px;
-  list-style-type: none;
+.menu-horiz{
+  /*background-color: #262423;*/
+  /*padding: 1%;*/
 }
 
+.menu-horiz li{
+  display: inline;
+  padding: 0 9% 0 9%;
+}
+.menu-horiz li a{
+  text-decoration: none;
+  font-family: "Tahoma", serif;
+  font-size: 20px;
+  color: #ffffff;
+  padding: 1%;
+}
+.menu-horiz li a:link{
+  color:#ffffff;
+}
+.menu-horiz li a:visited{
+  color: #ffffff;
+}
+.menu-horiz li a:hover{
+  background: darkred;
+  color: white;
+}
 #historia{
   text-align: center;
 }
 
 
-a:hover{
-  background: #1F223B;
+.menu-box{
+  padding: 0.1% 0 0.1% 0;
+  background-color: #262423;
+  border-radius: 10px 10px 0px 0px;
+}
+
+
+.tit-pag{
+  text-align: center;
+  font-family: 'Tahoma',serif;
+
+}
+
+#history {
+  margin: 0 3% 0 3%;
 }
