--- a/Css/Python.css
+++ b/Css/Python.css
@@ -1,20 +1,38 @@
 #Container{
-  background-color:#4129E6;
-  margin: 0 15 0 15;
-  font-family: 'Times New Roman', Arial, Calibri,serif;
+  background-color:#0e063d;
+  margin: 0 15 0 15  ;
+  font-family: 'Times New Roman', Arial,Calibri,serif;
   font-style: normal;
-  color:#696969;
+  color:#fff;
+  height: 800px;
 }
-.LinksPaginas{
-
-  color: inherit, #f2f7ff;
+.MenuBox{
+  padding: 0.1% 0 0.1% 0;
+  background-color: #252423;
+  border-radius:0px 0px 50px 50px;
+}
+.MenuHorzontal li{
+  display: inline;
+  padding: 0 9% 1% 9%;
+}
+.MenuHorzontal li a {
+  color: #ffffff;
+  font-family:'Tahoma' serif;
   font-size: 20px;
-  color: #7856f4;
-  margin-bottom:30% ;
+  padding: 1%;
 }
-.Imagempython{
-  margin-left: 38%;
-  margin-right: 50%;
-  margin-top: -10%;
-  position: absolute;
+.MenuHorzontal li a:link{
+  color: #ffffff;
+}
+.MenuHorzontal li a:visited{
+  color: #ffffff;
+}
+.MenuHorzontal li a:hover{
+  color: #000000;
+}
+.Titulo{
+
+font-family: 'Times New Rman', serif;
+padding-left: 2%;
+
 }
